--- a/template/header/header.html
+++ b/template/header/header.html
@@ -41,7 +41,7 @@
         <nav class="nav__container_menu">
           <ul>
             <li>
-              <a href="#" class="text_large-2">Statistic</a>
+              <a href="./statistic" class="text_large-2">Statistic</a>
             </li>
             <li>
               <a href="./" class="text_large-2">Limitter</a>
