--- a/styles/style.scss
+++ b/styles/style.scss
@@ -27,3 +27,5 @@
 @import '../template/modals/key-performance/key-performance';
 @import '../template/modals/settings/settings';
 @import '../template/modals/runner-panel/runner-panel';
+
+@import '../template/statistic/bar.scss';
