--- a/template/statistic/header.html
+++ b/template/statistic/header.html
@@ -105,7 +105,7 @@
       </button>
     </div>
 
-    <div class="d-flex align-items-center">
+    <div class="d-flex align-items-center gap-2">
       <button
         class="button-non-press button-non-press--navbar-last button-non-press_big-2 text_large btn-shadow"
         data-type="btn"
