--- a/styles/style.scss
+++ b/styles/style.scss
@@ -29,3 +29,4 @@
 @import '../template/modals/runner-panel/runner-panel';
 
 @import '../template/statistic/bar.scss';
+@import '../template/statistic/chart.scss';
