--- a/styles/style.scss
+++ b/styles/style.scss
@@ -30,3 +30,4 @@
 
 @import '../template/statistic/bar.scss';
 @import '../template/statistic/chart.scss';
+@import '../template/statistic/range-blocks.scss';
