--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,6 +10,9 @@
 @import './components/schedule-table';
 @import './components/small-indicator';
 @import './components/vertical-button-group';
+@import './components/dual-range';
+@import './components/progress';
+@import './components/rating-label';
 
 @import '../template/modals/modals';
 @import '../template/modals/risk-manager/risk-manager';
