--- a/styles/style.css
+++ b/styles/style.css
@@ -1044,6 +1044,16 @@ svg {
   content: "-";
 }
 
+.hide-value .data-wrap p {
+  display: none;
+}
+.hide-value .data-wrap::before {
+  font-size: 16px;
+  line-height: 1;
+  color: RGBA(52, 64, 84, 0.25);
+  content: "-";
+}
+
 .button-new,
 .button-non-press {
   height: 26px;
@@ -1910,8 +1920,12 @@ svg {
   padding: 30px 50px 40px 40px;
 }
 .block-container-wrap .block-content-wrap--statistic .block-content-wrap__wrapper {
-  display: grid;
-  gap: 12px;
+  max-height: 360px;
+  overflow-y: auto;
+  scrollbar-width: none;
+}
+.block-container-wrap .block-content-wrap--statistic .block-content-wrap__wrapper::-webkit-scrollbar {
+  display: none;
 }
 
 .padding-block_medium {
@@ -2400,6 +2414,151 @@ svg {
 }
 .vertical-button-group__btn:last-child {
   border-radius: 0 0 6px 6px;
+}
+
+.dual-range-wrapper {
+  padding-top: 15px;
+}
+
+.dual-range-container {
+  display: grid;
+  grid-template-columns: 60px auto 60px;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+}
+
+.dual-range {
+  --handle-size: 6px;
+  --range-color: #5e88a0;
+  position: relative;
+  height: 10px;
+  width: 100%;
+  max-width: 654px;
+  background-color: #f2f4f7;
+  border: 1px solid #fff;
+  border-radius: 6px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1) inset;
+  user-select: none;
+}
+.dual-range--red {
+  --range-color: #d23448;
+}
+.dual-range__highlight {
+  position: absolute;
+  left: var(--x-1);
+  z-index: 1;
+  height: 100%;
+  width: calc(var(--x-2) - var(--x-1) + var(--handle-size));
+  background-color: var(--range-color);
+  border-radius: 50px;
+}
+.dual-range__handle {
+  position: absolute;
+  top: 50%;
+  z-index: 2;
+  width: var(--handle-size);
+  height: var(--handle-size);
+  background-color: #fff;
+  border-radius: 50%;
+  transform: translateY(-50%);
+  cursor: grab;
+}
+.dual-range__handle:active {
+  cursor: grabbing;
+}
+.dual-range__handle--left {
+  left: calc(var(--x-1) + 1px);
+}
+.dual-range__handle--right {
+  left: calc(var(--x-2) - 1px);
+}
+.dual-range__handle::after {
+  position: absolute;
+  top: -22px;
+  left: 50%;
+  padding: 0 4px;
+  background-color: #f2f4f7;
+  font-size: 15px;
+  line-height: 18px;
+  transform: translateX(-50%);
+  content: attr(data-value);
+}
+
+.progress {
+  --progress-color: #5e88a0;
+  width: 100%;
+  height: 17px;
+  border: 1px solid #fff;
+  border-radius: 6px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1) inset;
+}
+.progress--red {
+  --progress-color: #d43449;
+}
+.progress-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  background-color: var(--progress-color);
+  text-align: end;
+  font-size: 12px;
+  border-radius: 6px;
+}
+.progress-bar::after {
+  width: 5px;
+  content: "";
+}
+
+.progress-container {
+  flex-grow: 1;
+  display: grid;
+  grid-template-columns: auto 40px;
+  align-items: center;
+  gap: 20px;
+}
+
+.progress-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.progress-wrapper__title {
+  font-size: 15px;
+  padding-left: 44px;
+}
+.progress-wrapper__field {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.rating-label {
+  display: flex;
+  gap: 2px;
+}
+.rating-label__star {
+  width: 12px;
+  height: 12px;
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='10' viewBox='0 0 10 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.13484 0.669999C4.51042 -0.0396326 5.52697 -0.0396328 5.90254 0.669999L6.62851 2.04169C6.77343 2.31552 7.03708 2.50671 7.34238 2.55937L8.87033 2.82292C9.66361 2.95975 9.97833 3.93004 9.41638 4.50644L8.33934 5.61117C8.1224 5.8337 8.02124 6.14443 8.06561 6.45203L8.28603 7.97997C8.40078 8.77543 7.57779 9.37442 6.85613 9.02067L5.45884 8.33575C5.18119 8.19965 4.8562 8.19965 4.57855 8.33575L3.18125 9.02067C2.45959 9.37442 1.6366 8.77543 1.75135 7.97997L1.97177 6.45203C2.01614 6.14443 1.91498 5.8337 1.69804 5.61117L0.621007 4.50644C0.0590565 3.93004 0.373767 2.95975 1.16705 2.82292L2.69501 2.55937C3.0003 2.50671 3.26395 2.31552 3.40887 2.04169L4.13484 0.669999Z' fill='%23C2C7CE' fill-opacity='0.59'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.rating-label[data-rating="1"] :nth-child(-n+1) {
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='10' viewBox='0 0 10 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.13484 0.669999C4.51042 -0.0396326 5.52697 -0.0396328 5.90254 0.669999L6.62851 2.04169C6.77343 2.31552 7.03708 2.50671 7.34238 2.55937L8.87033 2.82292C9.66361 2.95975 9.97833 3.93004 9.41638 4.50644L8.33934 5.61117C8.1224 5.8337 8.02124 6.14443 8.06561 6.45203L8.28603 7.97997C8.40078 8.77543 7.57779 9.37442 6.85613 9.02067L5.45884 8.33575C5.18119 8.19965 4.8562 8.19965 4.57855 8.33575L3.18125 9.02067C2.45959 9.37442 1.6366 8.77543 1.75135 7.97997L1.97177 6.45203C2.01614 6.14443 1.91498 5.8337 1.69804 5.61117L0.621007 4.50644C0.0590565 3.93004 0.373767 2.95975 1.16705 2.82292L2.69501 2.55937C3.0003 2.50671 3.26395 2.31552 3.40887 2.04169L4.13484 0.669999Z' fill='%23FFDD00'/%3E%3C/svg%3E%0A");
+}
+.rating-label[data-rating="2"] :nth-child(-n+2) {
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='10' viewBox='0 0 10 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.13484 0.669999C4.51042 -0.0396326 5.52697 -0.0396328 5.90254 0.669999L6.62851 2.04169C6.77343 2.31552 7.03708 2.50671 7.34238 2.55937L8.87033 2.82292C9.66361 2.95975 9.97833 3.93004 9.41638 4.50644L8.33934 5.61117C8.1224 5.8337 8.02124 6.14443 8.06561 6.45203L8.28603 7.97997C8.40078 8.77543 7.57779 9.37442 6.85613 9.02067L5.45884 8.33575C5.18119 8.19965 4.8562 8.19965 4.57855 8.33575L3.18125 9.02067C2.45959 9.37442 1.6366 8.77543 1.75135 7.97997L1.97177 6.45203C2.01614 6.14443 1.91498 5.8337 1.69804 5.61117L0.621007 4.50644C0.0590565 3.93004 0.373767 2.95975 1.16705 2.82292L2.69501 2.55937C3.0003 2.50671 3.26395 2.31552 3.40887 2.04169L4.13484 0.669999Z' fill='%23FFDD00'/%3E%3C/svg%3E%0A");
+}
+.rating-label[data-rating="3"] :nth-child(-n+3) {
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='10' viewBox='0 0 10 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.13484 0.669999C4.51042 -0.0396326 5.52697 -0.0396328 5.90254 0.669999L6.62851 2.04169C6.77343 2.31552 7.03708 2.50671 7.34238 2.55937L8.87033 2.82292C9.66361 2.95975 9.97833 3.93004 9.41638 4.50644L8.33934 5.61117C8.1224 5.8337 8.02124 6.14443 8.06561 6.45203L8.28603 7.97997C8.40078 8.77543 7.57779 9.37442 6.85613 9.02067L5.45884 8.33575C5.18119 8.19965 4.8562 8.19965 4.57855 8.33575L3.18125 9.02067C2.45959 9.37442 1.6366 8.77543 1.75135 7.97997L1.97177 6.45203C2.01614 6.14443 1.91498 5.8337 1.69804 5.61117L0.621007 4.50644C0.0590565 3.93004 0.373767 2.95975 1.16705 2.82292L2.69501 2.55937C3.0003 2.50671 3.26395 2.31552 3.40887 2.04169L4.13484 0.669999Z' fill='%23FFDD00'/%3E%3C/svg%3E%0A");
+}
+.rating-label[data-rating="4"] :nth-child(-n+4) {
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='10' viewBox='0 0 10 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.13484 0.669999C4.51042 -0.0396326 5.52697 -0.0396328 5.90254 0.669999L6.62851 2.04169C6.77343 2.31552 7.03708 2.50671 7.34238 2.55937L8.87033 2.82292C9.66361 2.95975 9.97833 3.93004 9.41638 4.50644L8.33934 5.61117C8.1224 5.8337 8.02124 6.14443 8.06561 6.45203L8.28603 7.97997C8.40078 8.77543 7.57779 9.37442 6.85613 9.02067L5.45884 8.33575C5.18119 8.19965 4.8562 8.19965 4.57855 8.33575L3.18125 9.02067C2.45959 9.37442 1.6366 8.77543 1.75135 7.97997L1.97177 6.45203C2.01614 6.14443 1.91498 5.8337 1.69804 5.61117L0.621007 4.50644C0.0590565 3.93004 0.373767 2.95975 1.16705 2.82292L2.69501 2.55937C3.0003 2.50671 3.26395 2.31552 3.40887 2.04169L4.13484 0.669999Z' fill='%23FFDD00'/%3E%3C/svg%3E%0A");
+}
+.rating-label[data-rating="5"] :nth-child(-n+5) {
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='10' viewBox='0 0 10 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.13484 0.669999C4.51042 -0.0396326 5.52697 -0.0396328 5.90254 0.669999L6.62851 2.04169C6.77343 2.31552 7.03708 2.50671 7.34238 2.55937L8.87033 2.82292C9.66361 2.95975 9.97833 3.93004 9.41638 4.50644L8.33934 5.61117C8.1224 5.8337 8.02124 6.14443 8.06561 6.45203L8.28603 7.97997C8.40078 8.77543 7.57779 9.37442 6.85613 9.02067L5.45884 8.33575C5.18119 8.19965 4.8562 8.19965 4.57855 8.33575L3.18125 9.02067C2.45959 9.37442 1.6366 8.77543 1.75135 7.97997L1.97177 6.45203C2.01614 6.14443 1.91498 5.8337 1.69804 5.61117L0.621007 4.50644C0.0590565 3.93004 0.373767 2.95975 1.16705 2.82292L2.69501 2.55937C3.0003 2.50671 3.26395 2.31552 3.40887 2.04169L4.13484 0.669999Z' fill='%23FFDD00'/%3E%3C/svg%3E%0A");
 }
 
 .modal-container {
@@ -3282,73 +3441,9 @@ svg {
   gap: 25px;
 }
 
-.dual-range-wrapper {
-  padding-top: 15px;
-}
-
-.dual-range-container {
+.range-blocks-container {
   display: grid;
-  grid-template-columns: 60px auto 60px;
-  align-items: center;
-  gap: 10px;
-  width: 100%;
-}
-
-.dual-range {
-  --handle-size: 6px;
-  --range-color: #5e88a0;
-  position: relative;
-  height: 10px;
-  width: 100%;
-  max-width: 654px;
-  background-color: #f2f4f7;
-  border: 1px solid #fff;
-  border-radius: 6px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1019607843) inset;
-  user-select: none;
-}
-.dual-range--red {
-  --range-color: #d23448;
-}
-.dual-range__highlight {
-  position: absolute;
-  left: var(--x-1);
-  z-index: 1;
-  height: 100%;
-  width: calc(var(--x-2) - var(--x-1) + var(--handle-size));
-  background-color: var(--range-color);
-  border-radius: 50px;
-}
-.dual-range__handle {
-  position: absolute;
-  top: 50%;
-  z-index: 2;
-  width: var(--handle-size);
-  height: var(--handle-size);
-  background-color: #fff;
-  border-radius: 50%;
-  transform: translateY(-50%);
-  cursor: grab;
-}
-.dual-range__handle:active {
-  cursor: grabbing;
-}
-.dual-range__handle--left {
-  left: calc(var(--x-1) + 1px);
-}
-.dual-range__handle--right {
-  left: calc(var(--x-2) - 1px);
-}
-.dual-range__handle::after {
-  position: absolute;
-  top: -22px;
-  left: 50%;
-  padding: 0 4px;
-  background-color: #f2f4f7;
-  font-size: 15px;
-  line-height: 18px;
-  transform: translateX(-50%);
-  content: attr(data-value);
+  gap: 12px;
 }
 
 /*# sourceMappingURL=style.css.map */
