--- a/template/statistic/range-blocks.scss
+++ b/template/statistic/range-blocks.scss
@@ -11,79 +11,7 @@
   gap: 25px;
 }
 
-.dual-range-wrapper {
-  padding-top: 15px;
-}
-
-.dual-range-container {
+.range-blocks-container {
   display: grid;
-  grid-template-columns: 60px auto 60px;
-  align-items: center;
-  gap: 10px;
-  width: 100%;
-}
-
-.dual-range {
-  --handle-size: 6px;
-  --range-color: #5e88a0;
-
-  position: relative;
-  height: 10px;
-  width: 100%;
-  max-width: 654px;
-  background-color: #f2f4f7;
-  border: 1px solid #fff;
-  border-radius: 6px;
-  box-shadow: 0px 4px 4px 0px #0000001a inset;
-  user-select: none;
-
-  &--red {
-    --range-color: #d23448;
-  }
-
-  &__highlight {
-    position: absolute;
-    left: var(--x-1);
-    z-index: 1;
-    height: 100%;
-    width: calc(calc(var(--x-2) - var(--x-1)) + var(--handle-size));
-    background-color: var(--range-color);
-    border-radius: 50px;
-  }
-
-  &__handle {
-    position: absolute;
-    top: 50%;
-    z-index: 2;
-    width: var(--handle-size);
-    height: var(--handle-size);
-    background-color: #fff;
-    border-radius: 50%;
-    transform: translateY(-50%);
-    cursor: grab;
-
-    &:active {
-      cursor: grabbing;
-    }
-
-    &--left {
-      left: calc(var(--x-1) + 1px);
-    }
-
-    &--right {
-      left: calc(var(--x-2) - 1px);
-    }
-
-    &::after {
-      position: absolute;
-      top: -22px;
-      left: 50%;
-      padding: 0 4px;
-      background-color: #f2f4f7;
-      font-size: 15px;
-      line-height: 18px;
-      transform: translateX(-50%);
-      content: attr(data-value);
-    }
-  }
+  gap: 12px;
 }
