--- a/template/modals/_modals.scss
+++ b/template/modals/_modals.scss
@@ -26,6 +26,10 @@
   height: auto;
   max-height: 80vh;
 
+  .modal-window-wrap {
+    height: unset;
+  }
+
   &__content {
     padding: 1.25rem 1.25rem 0 1.25rem;
     margin-bottom: 1.25rem;
