--- a/template/modals/runner-panel/runner-panel.scss
+++ b/template/modals/runner-panel/runner-panel.scss
@@ -13,6 +13,10 @@
     .block-wrapper {
       max-width: unset;
     }
+
+    &--align-left {
+      justify-items: flex-start;
+    }
   }
 
   &__box {
