fix: issues after review

--- a/style_guide_2/main.scss
+++ b/style_guide_2/main.scss
@@ -1249,7 +1249,7 @@ svg {
 
 .modal-window-wrap {
   width: auto;
-  height: 100%;
+  height: auto;
   min-width: 300px;
   max-width: 50vw;
   min-height: 150px;
