--- a/template/modals/stretchPanel/stretch-panel.html
+++ b/template/modals/stretchPanel/stretch-panel.html
@@ -16349,7 +16349,7 @@
             <button
               class="button-non-press button-non-press_big text_regular"
               data-type="btn"
-              data-name="dates">
+              data-name="dates-single">
               Date & Time
             </button>
 
@@ -16388,7 +16388,7 @@
             <button
               class="button-non-press button-non-press_big text_regular"
               data-type="btn"
-              data-name="dates">
+              data-name="dates-single">
               Date & Time
             </button>
 
