--- a/template/statistic/bar.html
+++ b/template/statistic/bar.html
@@ -3,7 +3,9 @@
     <div class="statistic-bar-item">
       <div class="statistic-bar-item__caption">Select period</div>
 
-      <div class="statistic-bar-item__value">25</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">25</div>
+      </div>
 
       <div class="statistic-bar-item__popup">
         <p>Current month 4.13</p>
@@ -14,7 +16,9 @@
     <div class="statistic-bar-item">
       <div class="statistic-bar-item__caption">Risk Reword</div>
 
-      <div class="statistic-bar-item__value">2.51</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">2.51</div>
+      </div>
 
       <div class="statistic-bar-item__popup">
         <p>Current month 4.13</p>
@@ -25,7 +29,9 @@
     <div class="statistic-bar-item">
       <div class="statistic-bar-item__caption">Avr. pre day %</div>
 
-      <div class="statistic-bar-item__value">3.5</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">3.5</div>
+      </div>
 
       <div class="statistic-bar-item__popup">
         <p>Current month 4.13</p>
@@ -36,7 +42,9 @@
     <div class="statistic-bar-item">
       <div class="statistic-bar-item__caption">Balance %</div>
 
-      <div class="statistic-bar-item__value">15.6</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">15.6</div>
+      </div>
 
       <div class="statistic-bar-item__popup">
         <p>Current month 4.13</p>
@@ -44,10 +52,12 @@
       </div>
     </div>
 
-    <div class="statistic-bar-item">
+    <div class="statistic-bar-item" data-unit="$">
       <div class="statistic-bar-item__caption">PnL $</div>
 
-      <div class="statistic-bar-item__value">20.5K</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">20.5K</div>
+      </div>
 
       <div class="statistic-bar-item__popup">
         <p>Current month 4.13</p>
@@ -58,17 +68,21 @@
     <div class="statistic-bar-item">
       <div class="statistic-bar-item__caption">Prediction %</div>
 
-      <div class="statistic-bar-item__value">1.4K</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">1.4K</div>
+      </div>
 
       <div class="statistic-bar-item__popup">
         <p>365 days 4.1K %</p>
       </div>
     </div>
 
-    <div class="statistic-bar-item">
+    <div class="statistic-bar-item" data-unit="$">
       <div class="statistic-bar-item__caption">Prediction $</div>
 
-      <div class="statistic-bar-item__value">147.5K</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">147.5K</div>
+      </div>
 
       <div class="statistic-bar-item__popup">
         <p>365 days 4.1K $</p>
@@ -80,17 +94,23 @@
     <div class="statistic-bar-item statistic-bar-item--with-footer">
       <div class="statistic-bar-item__caption">Positions</div>
 
-      <div class="statistic-bar-item__value">1434</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">1434</div>
+      </div>
 
       <div class="statistic-bar-item__footer">
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Short</div>
-          <div class="statistic-bar-item__footer-value">1434</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">1434</div>
+          </div>
         </div>
 
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Long</div>
-          <div class="statistic-bar-item__footer-value">1434</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">1434</div>
+          </div>
         </div>
       </div>
 
@@ -103,17 +123,23 @@
     <div class="statistic-bar-item statistic-bar-item--with-footer">
       <div class="statistic-bar-item__caption">Days</div>
 
-      <div class="statistic-bar-item__value">27</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">27</div>
+      </div>
 
       <div class="statistic-bar-item__footer">
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Unprofitable</div>
-          <div class="statistic-bar-item__footer-value">10</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">10</div>
+          </div>
         </div>
 
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Profitable</div>
-          <div class="statistic-bar-item__footer-value">17</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">17</div>
+          </div>
         </div>
       </div>
 
@@ -126,17 +152,23 @@
     <div class="statistic-bar-item statistic-bar-item--with-footer">
       <div class="statistic-bar-item__caption">Breakeven</div>
 
-      <div class="statistic-bar-item__value">400</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">400</div>
+      </div>
 
       <div class="statistic-bar-item__footer">
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Short</div>
-          <div class="statistic-bar-item__footer-value">100</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">100</div>
+          </div>
         </div>
 
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Long</div>
-          <div class="statistic-bar-item__footer-value">300</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">300</div>
+          </div>
         </div>
       </div>
 
@@ -149,17 +181,23 @@
     <div class="statistic-bar-item statistic-bar-item--with-footer">
       <div class="statistic-bar-item__caption">Avr. time (minutes)</div>
 
-      <div class="statistic-bar-item__value">237</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">237</div>
+      </div>
 
       <div class="statistic-bar-item__footer">
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Short</div>
-          <div class="statistic-bar-item__footer-value">105</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">105</div>
+          </div>
         </div>
 
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Long</div>
-          <div class="statistic-bar-item__footer-value">165</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">165</div>
+          </div>
         </div>
       </div>
 
@@ -169,20 +207,28 @@
       </div>
     </div>
 
-    <div class="statistic-bar-item statistic-bar-item--with-footer">
+    <div
+      class="statistic-bar-item statistic-bar-item--with-footer"
+      data-unit="$">
       <div class="statistic-bar-item__caption">Lost position $</div>
 
-      <div class="statistic-bar-item__value">750</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">750</div>
+      </div>
 
       <div class="statistic-bar-item__footer">
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Short</div>
-          <div class="statistic-bar-item__footer-value">1434</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">1434</div>
+          </div>
         </div>
 
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Long</div>
-          <div class="statistic-bar-item__footer-value">1434</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">1434</div>
+          </div>
         </div>
       </div>
 
@@ -192,20 +238,28 @@
       </div>
     </div>
 
-    <div class="statistic-bar-item statistic-bar-item--with-footer">
+    <div
+      class="statistic-bar-item statistic-bar-item--with-footer"
+      data-unit="$">
       <div class="statistic-bar-item__caption">Profit position $</div>
 
-      <div class="statistic-bar-item__value">27.5K</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">27.5K</div>
+      </div>
 
       <div class="statistic-bar-item__footer">
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Unprofitable</div>
-          <div class="statistic-bar-item__footer-value">10</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">10</div>
+          </div>
         </div>
 
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Profitable</div>
-          <div class="statistic-bar-item__footer-value">17</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">17</div>
+          </div>
         </div>
       </div>
 
@@ -215,20 +269,28 @@
       </div>
     </div>
 
-    <div class="statistic-bar-item statistic-bar-item--with-footer">
+    <div
+      class="statistic-bar-item statistic-bar-item--with-footer"
+      data-unit="$">
       <div class="statistic-bar-item__caption">Avr. lost $</div>
 
-      <div class="statistic-bar-item__value">400</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">400</div>
+      </div>
 
       <div class="statistic-bar-item__footer">
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Short</div>
-          <div class="statistic-bar-item__footer-value">100</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">100</div>
+          </div>
         </div>
 
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Long</div>
-          <div class="statistic-bar-item__footer-value">300</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">300</div>
+          </div>
         </div>
       </div>
 
@@ -238,20 +300,28 @@
       </div>
     </div>
 
-    <div class="statistic-bar-item statistic-bar-item--with-footer">
+    <div
+      class="statistic-bar-item statistic-bar-item--with-footer"
+      data-unit="$">
       <div class="statistic-bar-item__caption">Avr. profit $</div>
 
-      <div class="statistic-bar-item__value">2.1k</div>
+      <div class="statistic-bar-item__value-wrapper">
+        <div class="statistic-bar-item__value">2.1K</div>
+      </div>
 
       <div class="statistic-bar-item__footer">
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Short</div>
-          <div class="statistic-bar-item__footer-value">105</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">105</div>
+          </div>
         </div>
 
         <div class="statistic-bar-item__footer-item">
           <div class="statistic-bar-item__footer-caption">Long</div>
-          <div class="statistic-bar-item__footer-value">165</div>
+          <div class="statistic-bar-item__footer-value-wrapper">
+            <div class="statistic-bar-item__footer-value">165</div>
+          </div>
         </div>
       </div>
 
