fix: links in header

--- a/template/header/header.html
+++ b/template/header/header.html
@@ -50,10 +50,10 @@
               <a href="#" class="text_large-2">Ladder</a>
             </li>
             <li>
-              <a href="./runner" class="text_large-2">Runner</a>
+              <a href="./runner" class="text_large-2 active-link">Runner</a>
             </li>
             <li>
-              <a class="text_large-2 active-link" href="#">History</a>
+              <a class="text_large-2" href="./history">History</a>
             </li>
           </ul>
         </nav>
