--- a/template/statistic/header.html
+++ b/template/statistic/header.html
@@ -55,7 +55,7 @@
               <a href="./runner" class="text_large-2">Runner</a>
             </li>
             <li>
-              <a class="text_large-2" href="#">History</a>
+              <a class="text_large-2" href="./history">History</a>
             </li>
           </ul>
         </nav>
